language/move-lang/tests/move_check/naming/unbound_struct_in_current.move
module M {
    foo(s: Self::S): Self::S {
        let s = s;
        s
    }

    bar(): Self::S {
        S {}
    }

    baz() {
        S {} = bar();
        Self::S {} = bar();
    }

    bug() {
        let S {} = bar();
        let Self::S {} = bar();
    }
}
